# upword_game

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/ai/: theme_generator.py
backend/app/api/: corpus.py  rooms.py  translate.py
backend/app/corpus/: loader.py  schema.py
backend/app/game/: board.py  rotation.py  round.py  scoring.py  word_picker.py
backend/app/models/: errors.py  player.py  settings.py  team.py
backend/app/rooms/: codes.py  manager.py  room.py
backend/app/translation/: base.py  cache.py  mymemory.py  openai_translator.py
backend/app/ws/: router.py
backend/tests/: conftest.py  test_api_rooms.py  test_corpus.py  test_game_flow.py  test_guess_feed.py  test_health.py  test_normalise.py  test_phase4_room.py  test_phase5_reactions.py  test_phase6_reconnect.py  test_rooms.py  test_rotation.py  test_round_end_all_players.py  test_round_timer.py  test_scoring.py  test_teams_and_settings.py  test_theme_generator.py  test_theme_picks.py  test_translation.py  test_word_picker.py  test_ws_game.py  test_ws_phase4.py  test_ws_phase5.py  test_ws_rooms.py  test_ws_teams.py
data/: words.sample.en.json  words.sample.ru.json
deploy/: Caddyfile  nginx.conf
docs/: 01-implementation-plan.md  02-architecture.md  03-data-models-and-api.md  04-game-rules-and-scoring.md  05-words-corpus.md  06-ui-screens.md  07-i18n.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.docker.conf  package-lock.json  package.json  (+3 more)
(+42 files in other folders)
